--- a/app/src/main/res/layout/fragment_teacher.xml
+++ b/app/src/main/res/layout/fragment_teacher.xml
@@ -6,10 +6,10 @@
     tools:context=".fragment.FragmentTeachers">
 
     <include
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/included"
-        layout="@layout/layout_error" />
+        layout="@layout/layout_error"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/sl_swipe"
